Fix navigation pseudo element z-index to make focus indicator work as expected

--- a/assets/styles/05-components/header.css
+++ b/assets/styles/05-components/header.css
@@ -90,6 +90,7 @@
   width: 100%;
   height: 100%;
   background-color: #16374c;
+  z-index: -1; /* behind navigation content */
 }
 
 @media (min-width: 720px) {
